--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "node-uuid": "1.3.x",
     "hiredis": "0.1.x",
-    "node-redis": "0.1.x"
+    "redis": "0.7.x"
+  },
+  "bin": {
+    "emitt3r": "bin/run-emitt3r.js"
   },
   "devDependencies": {},
   "optionalDependencies": {},
   "engines": {
-    "node": "*"
+    "node": "0.6.x"
   }
 }
